--- a/src/pages/505-error/505-error.pug
+++ b/src/pages/505-error/505-error.pug
@@ -2,13 +2,13 @@ doctype html
 html(lang="en")
     head
         meta(charset="UTF-8")
-        link(href="../../../src/components/button__back/button__back.css" rel="stylesheet")
+        link(href="../components/button__back/button__back.css" rel="stylesheet")
         link(href="error.css" rel="stylesheet")
     body
         include ../components/button__back/button__back
         div(class="inside")
-            p(class="line1") упс
-            h1(class="line")  Ошибка 505
-            p(class="line2") мы уже работаем над этим!
-            a(class="line3" href="index.html") назад к чатам
+            p(class="line-error-oops") упс
+            h1(class="line-error-505")  Ошибка 505
+            p(class="line-error-sorry") мы уже работаем над этим!
+            a(class="line-error-back" href="index.html") назад к чатам
 
