--- a/src/pages/change-profile-password/new-password.pug
+++ b/src/pages/change-profile-password/new-password.pug
@@ -2,20 +2,19 @@ doctype html
 html(lang="en")
     head
         meta(charset="UTF-8")
-        link(href="../../../src/components/button__back/button__back.css" rel="stylesheet")
-        link(href="../../components/sign_smt_form/sign_smt_form.css" rel="stylesheet")
+        link(href="../components/button__back/button__back.css" rel="stylesheet")
+        link(href="../components/sign_smt_form/sign_smt_form.css" rel="stylesheet")
         link(href="./new-password.css" rel="stylesheet")
-        //link(href="../../components/sign_smt_form/sign_smt_form.css")
     body
         include ../components/button__back/button__back
         div(class="container")
-            img(src="../../../static/ava.png" alt="аватар")
+            img(src="../static/ava.png" alt="аватар")
             form
                 div
-                    label(for="oldPassword") логин
+                    label(for="oldPassword") старый пароль
                     input(name="oldPassword", type="password", id="oldPassword", placeholder="old password")
                 div
-                    label(for="newPassword") логин
+                    label(for="newPassword") новый пароль
                     input(name="newPassword", type="password", id="newPassword", placeholder="new password")
                 div(class="column-group")
                     button(class="prime") Сохранить новый пароль
