--- a/src/pages/change-profile/change-profile.pug
+++ b/src/pages/change-profile/change-profile.pug
@@ -4,7 +4,7 @@ html(lang="en")
         meta(charset="UTF-8")
         link(href="../../../src/components/button__back/button__back.css" rel="stylesheet")
         link(href="../../components/sign_smt_form/sign_smt_form.css" rel="stylesheet")
-        link(href="./change-prpfile.css" rel="stylesheet")
+        link(href="./change-profile.css" rel="stylesheet")
         //link(href="../../components/sign_smt_form/sign_smt_form.css")
     body
         include ../components/button__back/button__back
