--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -28,4 +28,4 @@ html(lang="en")
                         a(class="to-user" href="../505-error/505-error.pug") Маша
                         label(class="last-word") ну выйди(
 
-            h3 выберите чат и начните переписку!
+            p(class="start-talk") выберите чат и начните переписку!
