--- a/src/pages/main-page.css
+++ b/src/pages/main-page.css
@@ -85,7 +85,7 @@ a.to-user {
   line-height: 19px;
   color: rgba(0, 0, 0, 0.39);
 }
-h3 {
+.start-talk {
   text-align: center;
   font-family: 'Inter', sans-serif;
   font-style: normal;
