--- a/src/pages/404-error/404-error.pug
+++ b/src/pages/404-error/404-error.pug
@@ -2,13 +2,13 @@ doctype html
 html(lang="en")
     head
         meta(charset="UTF-8")
-        link(href="../../../src/components/button__back/button__back.css" rel="stylesheet")
+        link(href="../components/button__back/button__back.css" rel="stylesheet")
         link(href="error.css" rel="stylesheet")
     body
         include ../components/button__back/button__back
-        div(class="inside")
-            p(class="line1") упс
-            h1(class="line")  Ошибка 404
-            p(class="line2") не туда зашли
-            a(class="line3" href="index.html") назад к чатам
+        div(class="error-inside-block")
+            p(class="line-error-oops") упс
+            h1(class="line-error-404")  Ошибка 404
+            p(class="line-error-wrong-place") не туда зашли
+            a(class="line-error-back-to-chats" href="index.html") назад к чатам
 
