--- a/src/pages/505-error/error.less
+++ b/src/pages/505-error/error.less
@@ -1,24 +1,27 @@
+@blue: #3369F3;
+
+
 .font-sizer(@size){
   text-align: center;
   font-family: normal, sans-serif;
   font-size: @size;
 }
 
-.line1{
+.line-error-oops{
   .font-sizer(48px);
 }
 
-.line2{
+.line-error-sorry{
   .font-sizer(36px);
 }
 
-.line3{
+.line-error-back{
   .font-sizer(24px);
-  color: #3369F3;
+  color: @blue;
   text-decoration: none;
 }
 
-h1{
+h1.line-error-505{
   .font-sizer(80px);
 }
 
