--- a/src/pages/components/button__back/button__back.pug
+++ b/src/pages/components/button__back/button__back.pug
@@ -1,1 +1,1 @@
-button(class="button__back" type="button" onclick="location.href = '../main-page/index.html';") ←
+button(class="button__back" type="button" onclick="location.href = '../index.html';") ←
