Sprint 1 третья попытка

--- a/src/pages/505-error/505-error.pug
+++ b/src/pages/505-error/505-error.pug
@@ -2,13 +2,13 @@ doctype html
 html(lang="en")
     head
         meta(charset="UTF-8")
-        link(href="../components/button__back/button__back.css" rel="stylesheet")
-        link(href="error.css" rel="stylesheet")
+        link(href="../components/button__back/button__back.less" rel="stylesheet")
+        link(href="error.less" rel="stylesheet")
     body
         include ../components/button__back/button__back
         div(class="inside")
             p(class="line-error-oops") упс
             h1(class="line-error-505")  Ошибка 505
             p(class="line-error-sorry") мы уже работаем над этим!
-            a(class="line-error-back" href="index.html") назад к чатам
+            a(class="line-error-back" href="../index.pug") назад к чатам
 
