--- a/src/pages/change-profile-password/new-password.pug
+++ b/src/pages/change-profile-password/new-password.pug
@@ -2,9 +2,9 @@ doctype html
 html(lang="en")
     head
         meta(charset="UTF-8")
-        link(href="../components/button__back/button__back.css" rel="stylesheet")
-        link(href="../components/sign_smt_form/sign_smt_form.css" rel="stylesheet")
-        link(href="./new-password.css" rel="stylesheet")
+        link(href="../components/button__back/button__back.less" rel="stylesheet")
+        link(href="../components/sign_smt_form/sign_smt_form.less" rel="stylesheet")
+        link(href="new-password.less" rel="stylesheet")
     body
         include ../components/button__back/button__back
         div(class="container")
