--- a/src/pages/profile/profile.pug
+++ b/src/pages/profile/profile.pug
@@ -2,9 +2,9 @@ doctype html
 html(lang="en")
     head
         meta(charset="UTF-8")
-        link(href="../../../src/components/button__back/button__back.css" rel="stylesheet")
-        link(href="../../components/sign_smt_form/sign_smt_form.css" rel="stylesheet")
-        link(href="./profile.css" rel="stylesheet")
+        link(href="../components/button__back/button__back.less" rel="stylesheet")
+        link(href="../components/sign_smt_form/sign_smt_form.less" rel="stylesheet")
+        link(href="profile.less" rel="stylesheet")
     body
         include ../components/button__back/button__back
         div(class="inner-profile")
@@ -26,7 +26,7 @@ html(lang="en")
                     input(name="phone" type="text" id="phone" placeholder="8 (926) 191 43 25" disabled)
 
             div(class="center")
-                img(src="../../../static/ava.png" alt="аватар")
+                img(src="../static/ava.png" alt="аватар")
                 div(class="margin")
                     p Мати, Матвей
                     p Melekh
