Sprint 1 четвёртая попытка

--- a/src/pages/404-error/404-error.pug
+++ b/src/pages/404-error/404-error.pug
@@ -10,5 +10,5 @@ html(lang="en")
             p(class="line-error-oops") упс
             h1(class="line-error-404")  Ошибка 404
             p(class="line-error-wrong-place") не туда зашли
-            a(class="line-error-back-to-chats" href="../index.pug") назад к чатам
+            a(class="line-error-back-to-chats" href='../index.pug') назад к чатам
 
