--- a/src/pages/change-profile-password/new-password.pug
+++ b/src/pages/change-profile-password/new-password.pug
@@ -9,7 +9,7 @@ html(lang="en")
         include ../components/button__back/button__back
         div(class="container")
             img(src="../static/ava.png" alt="аватар")
-            form
+            form(class="max-height-form-password")
                 div
                     label(for="oldPassword") старый пароль
                     input(name="oldPassword", type="password", id="oldPassword", placeholder="old password")
