--- a/src/pages/change-profile/change-profile.less
+++ b/src/pages/change-profile/change-profile.less
@@ -1,6 +1,7 @@
 @img-size: 200px;
 
 .container{
+  height: 100vh;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -11,4 +12,12 @@ img{
   border-radius: 50%;
   height: @img-size;
   width: @img-size;
+}
+
+.max-height-form-ava{
+  max-height: 500px;
+}
+
+.max-height-form-data{
+  max-height: 800px;
 }
