--- a/src/pages/components/button__back/button__back.pug
+++ b/src/pages/components/button__back/button__back.pug
@@ -1,1 +1,2 @@
-button(class="button__back" type="button" onclick="location.href = '../index.html';") ←
+a(class="button__back"  href="../index.pug")
+    p(class="arrow") ←
