--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -20,13 +20,13 @@ html(lang="en")
                 div(class="inner-user")
                     img(src="./static/ava1.png" alt="аватар")
                     div(class="inner-user-text")
-                        a(class="to-user" href="404-error/404-error.pug") Паша
+                        a(class="to-user" href="./404-error/404-error.pug") Паша
                         label(class="last-word") гулять!
 
                 div(class="inner-user")
                     img(src="static/ava2.png" alt="аватар")
                     div(class="inner-user-text")
-                        a(class="to-user" href="505-error/505-error.pug") Маша
+                        a(class="to-user" href="./505-error/505-error.pug") Маша
                         label(class="last-word") ну выйди(
 
             p(class="start-talk") выберите чат и начните переписку!
