--- a/src/pages/log-in/login.pug
+++ b/src/pages/log-in/login.pug
@@ -2,8 +2,8 @@ doctype html
 html(lang="en")
     head
         meta(charset="UTF-8")
-        link(href="../../../src/components/button__back/button__back.less" rel="stylesheet")
-        link(href="../../components/sign_smt_form/sign_smt_form.less" rel="stylesheet")
+        link(href="../components/button__back/button__back.less" rel="stylesheet")
+        link(href="../components/sign_smt_form/sign_smt_form.less" rel="stylesheet")
     body
         div(class="container_form")
             form
