--- a/src/pages/profile/profile.pug
+++ b/src/pages/profile/profile.pug
@@ -30,9 +30,9 @@ html(lang="en")
                 div(class="margin")
                     p Мати, Матвей
                     p Melekh
-                a(class="blue" onclick="location.href = '../change-profile/change-profile.html';") изменить данные профиля
-                a(class="blue" onclick="location.href = '../change-profile-password/new-password.html';") изменить пароль
-                a(class="red" onclick="location.href = '../main-page/index.html';") выйти
+                a(class="blue" href="../change-profile/change-profile.pug") изменить данные профиля
+                a(class="blue" href="../change-profile-password/new-password.pug") изменить пароль
+                a(class="red" href='../index.pug') выйти
 
 
 
