--- a/src/pages/change-profile-password/new-password.less
+++ b/src/pages/change-profile-password/new-password.less
@@ -1,9 +1,16 @@
 @img-size: 300px;
 
 .container{
+  height: 100vh;
   margin: 30px;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+}
+
+
+.max-height-form-password{
+  max-height: 500px;
 }
 
 img {
