--- a/src/pages/components/button__back/button__back.less
+++ b/src/pages/components/button__back/button__back.less
@@ -1,19 +1,25 @@
 @btnSize: 50px;
 @db-color: #3369F3;
 
-button.button__back{
+a.button__back{
     font-size: 24px;
     cursor: pointer;
     background-color: @db-color;
     border-radius: 50%;
-    background-size: contain;
     border: 0;
     position: absolute;
     margin-left: @btnSize;
     margin-top: @btnSize;
     height: @btnSize;
     width: @btnSize;
+    display: flex;
+    text-decoration: none;
+    color: black;
     &:hover{
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
+}
+
+.button__back .arrow{
+    margin: auto;
 }
