--- a/src/pages/sign-up/sign_up.pug
+++ b/src/pages/sign-up/sign_up.pug
@@ -2,8 +2,8 @@ doctype html
 html(lang="en")
     head
         meta(charset="UTF-8")
-        link(href="../../../src/components/button__back/button__back.css" rel="stylesheet")
-        link(href="../../components/sign_smt_form/sign_smt_form.css" rel="stylesheet")
+        link(href="../components/button__back/button__back.css" rel="stylesheet")
+        link(href="../components/sign_smt_form/sign_smt_form.css" rel="stylesheet")
     body
         include ../components/button__back/button__back
         form(class="marg")
