--- a/src/pages/change-profile-password/new-password.pug
+++ b/src/pages/change-profile-password/new-password.pug
@@ -18,3 +18,6 @@ html(lang="en")
                     input(name="newPassword", type="password", id="newPassword", placeholder="new password")
                 div(class="column-group")
                     button(class="prime") Сохранить новый пароль
+                    
+                    
+                    qwerty
