--- a/src/pages/change-profile-password/new-password.pug
+++ b/src/pages/change-profile-password/new-password.pug
@@ -9,7 +9,7 @@ html(lang="en")
         include ../components/button__back/button__back
         div(class="container")
             img(src="../static/ava.png" alt="аватар")
-            form
+            form(class="max-height-form-password")
                 div
                     label(for="oldPassword") старый пароль
                     input(name="oldPassword", type="password", id="oldPassword", placeholder="old password")
@@ -18,3 +18,6 @@ html(lang="en")
                     input(name="newPassword", type="password", id="newPassword", placeholder="new password")
                 div(class="column-group")
                     button(class="prime") Сохранить новый пароль
+                    
+                    
+                    qwerty
