--- a/src/pages/change-profile/change-profile.less
+++ b/src/pages/change-profile/change-profile.less
@@ -1,23 +1,52 @@
-@img-size: 200px;
+@import "../../../src/static/constants.less";
 
-.container{
+form {
+  margin: auto;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  background-color: @bgColor;
+  border-radius: @dbRadius;
+  padding: @dbRadius;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 80%;
+  //max-height: 700px;
+  width: 40%;
+  max-width: 400px;
+  box-sizing: border-box;
+  overflow: auto;
+}
+
+
+.container {
   height: 100vh;
+  flex-direction: row;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 
-img{
-  margin: auto;
-  border-radius: 50%;
-  height: @img-size;
-  width: @img-size;
+div.column-group {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 15px;
+  align-items: center;
 }
 
-.max-height-form-ava{
+img {
+  margin: auto;
+  border-radius: 50%;
+  height: @imgMedSize;
+  width: @imgMedSize;
+}
+
+.max-height-form-ava {
   max-height: 500px;
 }
 
-.max-height-form-data{
+.max-height-form-data {
   max-height: 800px;
 }
