--- a/src/pages/log-in/login.pug
+++ b/src/pages/log-in/login.pug
@@ -1,21 +1,11 @@
-doctype html
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        link(href="../components/button__back/button__back.less" rel="stylesheet")
-        link(href="../components/sign_smt_form/sign_smt_form.less" rel="stylesheet")
-    body
-        div(class="container_form")
-            form
-                h2 Sign in
-                div
-                    div
-                        label(for="login") логин
-                        input(name="login", type="text", id="login", placeholder="login here")
-                    div
-                        label(for="pass") пароль
-                        input(name="password", type="password", id="pass" placeholder="password here")
-                div(class="column-group")
-                    button(class="prime") Enter
-                    button(class="secundus") Sign up
-        include ../components/button__back/button__back
+div(id="content")
+    div(class="container_form")
+        form
+            h1 Sign in
+            div
+                != loginInput
+                != passwordInput
+            div(class="column-group")
+                != submitBtn
+                button(class="secundus" type="button" onclick="window.renderPage('sign up')") Sign up
+    != buttonBack
