--- a/src/pages/main-page.less
+++ b/src/pages/main-page.less
@@ -1,20 +1,13 @@
 @cool-color: #80BDDF;
 @bg-color: #DFDEDE;
 @nice-bg: #F3F3F3;
-@blind-color: rgba(0, 0, 0, 0.39);
-@img-size: 80px;
-@btn-size: 40px;
-@border: solid 2px @cool-color;
 
 
-.text{
-  text-align: center;
-  font-family: 'Inter', sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 29px;
-}
+
+
+
+
+
 
 .main_page{
   display: flex;
@@ -86,7 +79,6 @@ a.to-user{
 
 .last-word{
   .text;
-  //align-self: center;
   display: block;
   font-size: 16px;
   line-height: 19px;
@@ -130,8 +122,7 @@ hr{
   font-size: 3em;
   width: 76px;
   height: 60px;
-  background-image: url("./static/menu icon.png");
-
+  background-image: url("../static/img/menu icon.png");
 }
 
 .chat{
@@ -148,7 +139,6 @@ hr{
   padding: 20px;
   display: flex;
   align-items: center;
-
 }
 
 .index-input-message{
@@ -170,7 +160,7 @@ hr{
   background-color: white;
   background-size: @btn-size;
   background-repeat: no-repeat;
-  background-image: url("./static/paper-clip-img.svg");
+  background-image: url("../static/img/paper-clip-img.svg");
   height: @btn-size;
   width: @btn-size;
 }
