--- a/src/pages/profile/profile.less
+++ b/src/pages/profile/profile.less
@@ -1,5 +1,4 @@
-@dark-color: #818181;
-@img-size: 400px;
+@import "../../static/constants";
 
 .inner-profile{
   height: 100vh;
@@ -9,8 +8,8 @@
 
 img{
   border-radius: 50%;
-  width: @img-size;
-  height: @img-size;
+  width: @imgProfileSize;
+  height: @imgProfileSize;
   margin: auto;
 }
 
@@ -37,7 +36,7 @@ p{
 a.blue{
   cursor: pointer;
   text-decoration: none;
-  color: #3369F3;
+  color: @blue;
   font-size: 24px;
   line-height: 29px;
   .text
