sprint-2 2.1 поправки ревью

--- a/src/components/button-back/button-back.pug
+++ b/src/components/button-back/button-back.pug
@@ -1,2 +1,2 @@
-a(class="button-back"  onclick="window.renderPage('chats')")
+a(class="button-back"  onclick="window.renderPage('back')")
     p(class="arrow") ←
