--- a/src/components/submit-button/submit-button.less
+++ b/src/components/submit-button/submit-button.less
@@ -1,7 +1,7 @@
 @import "../../../src/static/constants.less";
 @bg-color: 123;
 
-button{
+button {
   appearance: none;
   cursor: pointer;
   border: none;
@@ -12,13 +12,13 @@ button{
   min-height: @stanHeight;
 }
 
-form button.prime{
+.prime {
   background-color: @almostWhite;
   color: @coolColor;
   border-radius: @dbRadius;
 }
 
-form button.secundus{
+.secundus {
   background-color: @coolColor;
   color: black;
   border-radius: @dbRadius;
