--- a/src/pages/chats/chats.less
+++ b/src/pages/chats/chats.less
@@ -1,17 +1,17 @@
 @import "../../../src/static/constants.less";
 
-.main_page{
+.main_page {
   display: flex;
   height: 100vh;
 }
 
 .user-nav {
   flex-basis: 25%;
-  border-right: @border
+  border-right: @border;
 }
 
 .user-bar {
-  border-bottom: @border
+  border-bottom: @border;
 }
 
 .tools {
@@ -21,7 +21,7 @@
   cursor: pointer;
 }
 
-.user-bar input{
+.user-bar input {
   margin: 10px;
   border-radius: 17px;
   border: none;
@@ -31,7 +31,7 @@
   min-height: 30px;
 }
 
-.start-talk{
+.start-talk {
   .text;
   margin: auto;
   font-size: 40px;
