--- a/src/static/constants.less
+++ b/src/static/constants.less
@@ -1,6 +1,6 @@
 @btnBackSize: 50px;
-@blue: #3369F3;
-@coolColor: #7EBCDF;
+@blue: #3369f3;
+@coolColor: #7ebcdf;
 @red: rgb(218, 11, 32);
 @labelColor: #818181;
 @imgProfileSize: 400px;
@@ -9,21 +9,21 @@
 @dbRadius: 32px;
 @btnChatSize: 40px;
 @imgSmallSize: 80px;
-@almostWhite: #FDFDFD;
+@almostWhite: #fdfdfd;
 @stanHeight: 50px;
 @bgColor: rgba(217, 217, 217, 0.35);
 @border: solid 2px @coolColor;
 @blindColor: rgba(0, 0, 0, 0.39);
 
-.font-sizer(@sizeText){
+.font-sizer(@sizeText) {
   text-align: center;
   font-family: VTBGroupUI, normal, sans-serif;
   font-size: @sizeText;
 }
 
-.text{
+.text {
   text-align: center;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
