--- a/src/pages/sign-up/sign-up.pug
+++ b/src/pages/sign-up/sign-up.pug
@@ -1,35 +1,35 @@
-doctype html
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        link(href="../components/button-back/button-back.css" rel="stylesheet")
-        link(href="../components/sign-smt-form/sign-smt-form.css" rel="stylesheet")
-    body
-        include ../components/button-back/button-back
-        form(class="marg")
-            h1 Sign up
-            div
-                div
-                    label(for="first_name") короткое имя
-                    input(name="first_name", type="text", id="first_name", placeholder="short name")
-                div
-                    label(for="second_name") полное имя
-                    input(name="second_name", type="text", id="second_name" placeholder="full name")
-                div
-                    label(for="login") логин
-                    input(name="login", type="text", id="login" placeholder="login")
+div
+    != btnBack
+    form(class="marg")
+        h1 Sign up
+        div
+            != inputFirstName
+            != inputSecondName
+            != inputLogin
+            != inputEmail
+            != inputPhone
+            != inputPassword
+            //div
+            //    label(for="first_name") короткое имя
+            //    input(name="first_name", type="text", id="first_name", placeholder="short name")
+            //div
+            //    label(for="second_name") полное имя
+            //    input(name="second_name", type="text", id="second_name" placeholder="full name")
+            //div
+            //    label(for="login") логин
+            //    input(name="login", type="text", id="login" placeholder="login")
+            //
+            //div
+            //    label(for="email") почта
+            //    input(name="email", type="text", id="email" placeholder="email")
+            //
+            //div
+            //    label(for="phone") телефон
+            //    input(name="phone", type="text", id="phone" placeholder="phone")
+            //
+            //div
+            //    label(for="password") пароль
+            //    input(name="password", type="text", id="password" placeholder="password")
 
-                div
-                    label(for="email") почта
-                    input(name="email", type="text", id="email" placeholder="email")
-
-                div
-                    label(for="phone") телефон
-                    input(name="phone", type="text", id="phone" placeholder="phone")
-
-                div
-                    label(for="password") пароль
-                    input(name="password", type="text", id="password" placeholder="password")
-
-            div(class="column-group")
-                button(class="prime") Create profile
+        div(class="column-group")
+            != submitBtn
