--- a/src/pages/change-profile/change-profile.pug
+++ b/src/pages/change-profile/change-profile.pug
@@ -12,6 +12,6 @@ div
 
         form(class="max-height-form-ava")
             img(src=urlAva alt="аватар")
-            input(type="file" accept=".png, .jpg, .jpeg")
+            input(type="file" name="avatar" id="ava" accept=".png, .jpg, .jpeg")
             div(class="column-group")
                 != sbmButtonImage
