--- a/src/pages/chats/chats.less
+++ b/src/pages/chats/chats.less
@@ -6,6 +6,8 @@
 }
 
 .user-nav {
+
+  overflow: auto;
   flex-basis: 25%;
   border-right: @border;
 }
@@ -36,4 +38,18 @@
   margin: auto;
   font-size: 40px;
   line-height: 29px;
+}
+
+.add-chat{
+  cursor: pointer;
+  background-color: white;
+  background-image: url("../../static/img/add.svg");
+  background-repeat: no-repeat;
+  height: 40px;
+  width: 40px;
+}
+
+.flex{
+  display: flex;
+  flex-direction: row;
 }
