--- a/src/pages/sing-in/login.pug
+++ b/src/pages/sing-in/login.pug
@@ -7,5 +7,5 @@ div(id="content")
                 != passwordInput
             div(class="column-group")
                 != submitBtn
-                button(class="secundus" type="button" onclick="window.renderPage('sign up')") Sign up
+                != createAc
     != buttonBack
