--- a/src/components/dialog-field/dialog-field.less
+++ b/src/components/dialog-field/dialog-field.less
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  height: 100vh;
   width: 100%;
 }
 
@@ -32,6 +33,9 @@
 }
 
 .body-chat {
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
   flex-grow: 1;
 }
 
@@ -101,3 +105,22 @@
   font-size: 40px;
   line-height: 29px;
 }
+
+.message{
+  margin: 10px;
+  padding: 10px;
+  background-color: @bgColor;
+  border-radius: 20px;
+}
+
+.get-message{
+  align-self: flex-start;
+  .message;
+}
+
+.send-message{
+  align-self: flex-end;
+  color: @coolColor;
+  .message;
+}
+
