--- a/src/index.less
+++ b/src/index.less
@@ -1,3 +1,5 @@
+@import "./static/constants";
+
 label {
   box-sizing: border-box;
 }
@@ -14,4 +16,16 @@ button {
   border: none;
   margin: 0;
   padding: 0;
+}
+
+.base-btn {
+  appearance: none;
+  cursor: pointer;
+  border: none;
+  font-size: 20px;
+  margin: 20px;
+  align-self: center;
+  width: 70%;
+  min-height: @stanHeight;
+  border-radius: @dbRadius;
 }
