--- a/src/pages/profile/profile.less
+++ b/src/pages/profile/profile.less
@@ -1,7 +1,7 @@
 @import "../../static/constants";
 
 .inner-profile {
-  height: 100vh;
+  width: 100%;
   display: flex;
   justify-content: space-around;
 }
@@ -53,4 +53,32 @@ a.red {
 
 .margin {
   margin: 20px;
+}
+
+
+.profile-value {
+  margin: 10px;
+  padding: 5px;
+}
+
+.header-to-value {
+  margin-left: 10px;
+  font-family: Inter, sans-serif;
+  display: block;
+  text-align: left;
+  font-size: 16px;
+  color: @labelColor;
+}
+
+.value {
+  padding: 3px;
+  font-size: 20px;
+  margin: 15px;
+  height: 30px;
+  background: none;
+  text-align: left;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 2px solid @coolColor;
 }
