sprint-4 webpack done docker in progress

--- a/src/components/dialog-field/dialog-field.less
+++ b/src/components/dialog-field/dialog-field.less
@@ -27,9 +27,9 @@
   background-color: white;
   border: none;
   font-size: 3em;
-  width: 76px;
-  height: 60px;
-  background-image: url("../../static/img/menu icon.png");
+  width: 40px;
+  height: 40px;
+  background-image: url("../../static/img/settings.svg");
 }
 
 .body-chat {
