--- a/src/components/input/input.less
+++ b/src/components/input/input.less
@@ -15,8 +15,9 @@ input.inlineText {
 
 .input-error {
   .font-sizer(14px);
+
   color: @red;
-  margin: 4px 0 0 0;
+  margin: 4px 0 0;
 }
 
 .input-label {
