--- a/src/components/modal-add-chat/modal-add-chat.less
+++ b/src/components/modal-add-chat/modal-add-chat.less
@@ -7,7 +7,7 @@
   right: 0;
   left: 0;
   display: none;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 50%);
 }
 
 .modal-content {
@@ -36,7 +36,7 @@
 }
 
 .modal-btn {
-  margin: 0px 50px;
+  margin: 0 50px;
   padding: 5px 20px;
   color: @coolColor;
   font-size: 14px;
@@ -51,12 +51,14 @@
 
 .modal-error {
   .text;
+
   color: @red;
   font-size: 14px;
 }
 
 .modal-label {
   .text;
+
   align-self: flex-start;
   margin: 0 23px;
   font-size: 14px;
