--- a/src/pages/chats/chats.less
+++ b/src/pages/chats/chats.less
@@ -17,7 +17,8 @@
 
 .tools {
   .text;
-  color: rgba(0, 0, 0, 0.51);
+
+  color: rgba(0, 0, 0, 50%);
   text-decoration: none;
   cursor: pointer;
 }
@@ -34,6 +35,7 @@
 
 .start-talk {
   .text;
+
   margin: auto;
   font-size: 40px;
   line-height: 29px;
