--- a/src/components/button-back/button-back.less
+++ b/src/components/button-back/button-back.less
@@ -14,8 +14,9 @@
   display: flex;
   text-decoration: none;
   color: black;
+
   &:hover {
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 25%);
   }
 }
 
