--- a/src/pages/change-profile/change-profile.less
+++ b/src/pages/change-profile/change-profile.less
@@ -7,7 +7,7 @@ form {
   background-color: @bgColor;
   border-radius: @dbRadius;
   padding: @dbRadius;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 25%);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
