--- a/src/pages/profile/profile.less
+++ b/src/pages/profile/profile.less
@@ -20,7 +20,7 @@ img {
 }
 
 .text {
-  font-family: "Inter", sans-serif;
+  font-family: Inter, sans-serif;
   font-style: normal;
   font-weight: 400;
   text-align: center;
