--- a/src/static/constants.less
+++ b/src/static/constants.less
@@ -23,7 +23,7 @@
 
 .text {
   text-align: center;
-  font-family: "Inter", sans-serif;
+  font-family: Inter, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
